@@ -1,3 +1,11 @@
+2004-03-17  Emmanuel Beffara  <manu@beffara.org>
+
+	* src/__init__.py, src/util.py: Added a method Depend.show_errors.
+
+	* src/graphics/mpost.py: Moved error reporting to the right place.
+
+	* src/cmdline.py, src/cmd_pipe.py: Write all messages on stderr.
+
 2004-03-06  Emmanuel Beffara  <manu@beffara.org>
 
 	* src/__init__.py: Portability improvement.
